[metadata]
name = discord-ext-tracker
version = 0.0.1-pre
description = A Tracker Features to discord.py
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = sizumita
author_email = contact@sumidora.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
